// Vitest Snapshot v1

exports[`compile() > should successfully compile single expressions 1`] = `
"import { default as _path } from 'path';
import { createRequire } from 'module';
const require = createRequire(import.meta.url);
const { evaluateAbellBlock: e } = require('abell/dist/utils/internal-utils');

const __filename = '/Users/saurabhdaware/Desktop/projects/abell-org/abell/packages/abell/src/vite-plugin-abell/compiler';
const __dirname = _path.dirname(__filename);
export const html = (props = {}) => {
  const Abell = { props, __filename, __dirname };
  return \`<body>\${e( 3 + 4 )}</body>\`
};
export default html;"
`;

exports[`compile() > should successfully compile with declarations 1`] = `
"import { default as _path } from 'path';
import { createRequire } from 'module';
const require = createRequire(import.meta.url);
const { evaluateAbellBlock: e } = require('abell/dist/utils/internal-utils');

      import fs from 'fs';
      import path from 'path';
      import { compile } from 'abell-renderer';
    
const __filename = '/Users/saurabhdaware/Desktop/projects/abell-org/abell/packages/abell/src/vite-plugin-abell/compiler';
const __dirname = _path.dirname(__filename);
export const html = (props = {}) => {
  const Abell = { props, __filename, __dirname };
  return \`
    
    <body>
      \${e( 3 + 4 )}
      <b>\${e( 'Helloo'.toUpperCase() )}</b>
      <div>
        \${e(
          [1, 2, 3].map(i => 
            i * 2
          )
        )}
      </div>
    </body>
    \`
};
export default html;"
`;
